set min max for navigation footer to avoid jumping

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header > div {
 
 nav {
   height: 60pt;
-  min-height: 35pt;
+  min-height: 60pt;
   max-height: 70pt;
   background-color: whitesmoke;
 
